objects/HR_Event_Attendance_YP__c.object
<CustomObject>
    <description>Is used to capture Graduates working as Assessors for Staffing assessment events</description>
    <fields>
        <fullName>Attendance_status__c</fullName>
        <inlineHelpText>Update this field after the event</inlineHelpText>
        <label>Attendance status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning to attend</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Did not attend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This record is the wrong record type. Only YP, YP2010, YP2012 and YP2012A can be added here.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>YP, YP2012, YP2012A, YP2010</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR Event Attendance YPs</relationshipLabel>
        <relationshipName>HR_Event_Attendance_YPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HR_Event__c</fullName>
        <label>HR Event</label>
        <referenceTo>HR_Event__c</referenceTo>
        <relationshipLabel>HR Event Attendance YPs</relationshipLabel>
        <relationshipName>HR_Event_Attendance_YPs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>No_of_hours_required__c</fullName>
        <description>Formula from HR Event - shows number of hours that YP is needed at an Assessment</description>
        <formula>HR_Event__r.YP_hours_required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows number of hours that YP is needed at an Assessment</inlineHelpText>
        <label>No of hours required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HR Event Attendance YP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HRYP-{000000}</displayFormat>
        <label>HR Event Attendance YP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR Event Attendance YPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>